@startuml
hide circle
scale 1.5
skinparam linetype ortho
skinparam monochrome true
left to right direction

entity "Tag" as tag {
  *id : int
  --
  name : varchar(100)
}

entity "TagsOnHosts" as tp {
  *id : int
  --
  *tagId : int <<FK>>
  *hostId : int <<FK>>
}

entity "Host" as host {
  *id : int
  --
  name : varchar(100)
  address : varchar(100)
}

entity "Ping" as ping {
  *id : int
  --
  createAt : datetime
  *hostId : int <<FK>>
  *statsId : int <<FK>>
}

entity "Stats" as stats {
  *id : int
  --
  transmitted : int
  received : int
  time : float
}

ping ||--|{ icmp
ping ||--|| stat
host ||--|{ ping
tp }|--|| admin
tp }|--|| host
@enduml
